# design-pattern-in-python

./: .gitignore  .pylintrc  mypy.ini  pyproject.toml  pytest.ini
src/chain_of_responsibility/: coin.py  logger.py  report.py
src/decorate/: UML.md  beverage.py  main.py
src/decorate/decorate/: UML.md  beverage.py  coffee.py  decorator.py  ingredient.py
src/decorate/use_inheritance/: coffee.py
src/facade/: UML.md  main.py
src/factory/abstract_factory/: UML.md  abstract_factory.py  ingredient.py  main.py  pizza.py  pizza_ingredient_factory.py  pizza_store.py
src/factory/factory_method/: UML.md  method_factory.py  pizza.py  pizza_store.py
src/factory/simple_factory/: UML.md  main.py  pizza.py  pizza_store.py  simple_factory.py
src/observer/: main.py  pull_observer.py  push_observer.py
src/singleton/: UML.md
src/singleton/classic_gof/: singleton.py
src/singleton/eager/: UML.md  meta.py  singleton.py
src/singleton/gof/: UML.md
src/singleton/meta/: UML.md  meta.py  singleton.py  singleton_meta.py
src/singleton/new/: UML.md  singleton.py
src/singleton/thread/: UML.md  meta.py  (+1 more)
src/strategy/: UML.md  duck.py  fly.py  main.py
tests/chain_of_responsibility/: test_chain_of_responsibility.py
tests/decorate/: test_decorate.py  test_use_inheritance.py
tests/facade/: test_facade.py
tests/factory/: test_abstract_factory.py  test_method_factory.py  test_simple_factory.py
tests/singleton/: test_classic_gof_singleton.py  test_eager_singleton.py  test_gof_singleton.py  test_meta_singleton.py  test_new_singleton.py  test_thread_safe_singleton.py
